single command reference - add evaluator for chaining